# jhupllib

./: .merlin  Makefile  PACKAGING.md  README.md  _oasis  jhupllib.opam
opam/: findlib  opam
src/: dune  eager_nondeterminism.ml  eager_nondeterminism.mli  monads.ml  monads.mli  multimap_pp.ml  multimap_to_yojson.ml  nondeterminism.ml  nondeterminism.mli  uids.ml  uids.mli  witness_protection.ml
src/jhupllib/: jbuild  jhupllib.ml  jhupllib_pp_utils.ml  jhupllib_uids.ml  jhupllib_uids.mli  jhupllib_witness_protection.ml  jhupllib_yojson_utils.ml  jhupllib_yojson_utils.mli
test/: dune  test.ml  test_monad.ml  test_witnesses.ml
