opam-version: "1.2"
name: "jhupllib"
version: "0.1.1+dev"
maintainer: "JHU PL Lab <pl.cs@jhu.edu>"
authors: [ "JHU PL Lab <pl.cs@jhu.edu>" ]
license: "Apache"
homepage: "http://pl.cs.jhu.edu/"
dev-repo: "https://github.com/JHU-PL-Lab/jhu-pl-lib.git"
bug-reports: "https://github.com/JHU-PL-Lab/jhu-pl-lib/issues"
build: [ "jbuilder" "build" "-p" name "-j" jobs ]
build-test: [ "jbuilder" "runtest" "-p" name "-j" jobs ]
depends: [
  "base-threads"
  "batteries"
  "monadlib"
  "oasis" {build & >= "0.4.7"}
  "ocaml-monadic"
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {build}
  "ppx_deriving" {>= "2.0"}
  "ppx_deriving_yojson"
  "yojson"
]
