opam-version: "1.2"
name: "jhupllib"
version: "0.2"
maintainer: "JHU PL Lab <pl.cs@jhu.edu>"
authors: [ "JHU PL Lab <pl.cs@jhu.edu>" ]
license: "Apache"
homepage: "http://pl.cs.jhu.edu/"
dev-repo: "https://github.com/JHU-PL-Lab/jhu-pl-lib.git"
bug-reports: "https://github.com/JHU-PL-Lab/jhu-pl-lib/issues"
build: [ "dune" "build" "-p" name "-j" jobs ]
build-test: [ "dune" "runtest" "-p" name "-j" jobs ]
available: [ ocaml-version >= "4.04" ]
depends: [
  "base-threads"
  "batteries"
  "dune" {build & >= "1.0+beta17"}
  "monadlib"
  "ocaml-monadic"
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {build}
  "ppx_deriving" {>= "2.0"}
  "ppx_deriving_yojson"
  "yojson"
]
