opam-version: "2.0"
name: "jhupllib"
version: "0.3+dev"
maintainer: "JHU PL Lab <pl.cs@jhu.edu>"
authors: [ "JHU PL Lab <pl.cs@jhu.edu>" ]
synopsis: "A collection of OCaml utilities used by the JHU PL lab"
description: """
A collection of OCaml utilities used by the JHU PL lab.  These are miscellaneous
utilities which did not appear readily in standard libraries when they were
written.
"""
license: "Apache-2.0"
homepage: "http://pl.cs.jhu.edu/"
doc: "https://github.com/JHU-PL-Lab/jhu-pl-lib/"
dev-repo: "git+https://github.com/JHU-PL-Lab/jhu-pl-lib.git"
bug-reports: "https://github.com/JHU-PL-Lab/jhu-pl-lib/issues"
build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "ocaml" {>= "4.08.0"}
  "base-threads"
  "batteries" {>= "3.0"}
  "dune" {>= "1.0"}
  "ocaml-monadic" {>= "0.4.1"}
  "ounit" {with-test}
  "ppx_deriving" {>= "2.0"}
  "ppx_deriving_yojson"
  "yojson" {>= "1.7.0"}
]
